# learningCMake

./: README.md
CMakeAndVS/: CMakeLists.txt  README.md
CMakeAndVS/app/: CMakeLists.txt  main.cc
CMakeAndVS/math/: CMakeLists.txt
cmakePractice/t1/: CMakeLists.txt  main.cpp
cmakePractice/t2/: CMakeLists.txt  COPYRIGHT
cmakePractice/t2/src/: CMakeLists.txt  main.cpp
cmakePractice/t3/: CMakeLists.txt
cmakePractice/t3/lib/: CMakeLists.txt  hello.cpp  hello.h
officialTutorial/basicStarting/: CMakeLists.txt  tutorial.cc
officialTutorial/installAndTesting/: CMakeLists.txt
officialTutorial/installAndTesting/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cc
officialTutorial/installAndTesting/Tutorial/: CMakeLists.txt
officialTutorial/libDepends/: CMakeLists.txt  Tutorial.cc
officialTutorial/libDepends/MathFunctions/: MathFunctions.h
officialTutorial/versionAndConfig/: CMakeLists.txt  Tutorial.cc
